modified:   Re-Flex-3D/package-lock.json 	modified:   Re-Flex-3D/package.json 	modified:   Re-Flex-3D/src/App.css 	modified:   Re-Flex-3D/src/Components/Footer.jsx 	modified:   Re-Flex-3D/src/Components/FrontPage.jsx 	modified:   Re-Flex-3D/vite.config.js 	modified:   backend/backend/__pycache__/urls.cpython-310.pyc 	modified:   backend/backend/urls.py 	modified:   backend/database/__pycache__/views.cpython-310.pyc 	new file:   backend/database/management/commands/__init__.py 	new file:   backend/database/management/utils/__init__.py 	new file:   backend/database/management/utils/__pycache__/__init__.cpython-310.pyc 	new file:   backend/database/management/utils/__pycache__/openai_integration.cpython-310.pyc 	new file:   backend/database/management/utils/openai_integration.py 	modified:   backend/database/views.py 	modified:   backend/requirements.txt

--- a/Re-Flex-3D/src/App.css
+++ b/Re-Flex-3D/src/App.css
@@ -15,12 +15,21 @@
   width: 100vw;
 }
 /* Styles for the header and footer */
-.header, .footer {
+.header {
   top: 10px;
   background-color: #ffffff; /* Dark background for header and footer */
   color: rgb(255, 0, 0); 
   text-align: center;
   padding: 10px 0;
+}
+.footer{
+  text-align: center;
+  color: #070707;
+}
+
+.footer-content{
+  color: #070707;
+  font-size: larger;
 }
 
 /* Styles for the main content area */
