--- a/Re-Flex-3D/src/App.css
+++ b/Re-Flex-3D/src/App.css
@@ -73,3 +73,16 @@
   width: 100px;
   height: 100px;
 }
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; /* Ensure it's above other content */
+  }
